--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body> 
     <header class="encabezado">
-
+        <img class="logo" src="./media/logoEspacioMelo.png" alt="Espacio Melo">
     </header>
 
     <!-- shop -->
