--- a/index.html
+++ b/index.html
@@ -12,11 +12,25 @@
         <img class="logo" src="./media/logoEspacioMelo.png" alt="Espacio Melo">
     </header>
 
+    <audio id="buySound" src="./media/button.mp3"></audio>
+
     <!-- shop -->
     <div class="card-products-container">
         <div class="card-products" id="shopContent">
         </div>
     </div>
+
+    <footer class="contenedorFooter">
+        <h1>Medios de contacto... </h1>
+        <div>
+            <a href="https://wa.me/message/JF5BCO7TZVLVG1" target="_blank">
+                <img id="wpp" class="icono" src="./media/WhatsApp.png">
+            </a>
+            <a href="https://www.instagram.com/espacio.melo/" target="_blank">
+                <img id="insta" class="icono" src="./media/instagram.png">
+            </a>
+        </div>
+    </footer>
 
     <!-- cart btn -->
     <div class="cart-btn" id="cart-btn"> 🛒 </div>
@@ -27,6 +41,8 @@
     <!-- modal -->
     <div class="modal-overlay" id="modal-overlay"></div>
     <div class="modal-container" id="modal-container"></div>
+
+    <div class="modal-informacion" id="modal-informacion"></div>
 
     <!-- importaciones -->
     <script src="./js/productos.js"></script>
