--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://sdk.mercadopago.com/js/v2"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body> 
     <header class="encabezado">
@@ -21,7 +24,7 @@
     </div>
 
     <footer class="contenedorFooter">
-        <h1>Medios de contacto... </h1>
+        <h1> REDES SOCIALES </h1>
         <div>
             <a href="https://wa.me/message/JF5BCO7TZVLVG1" target="_blank">
                 <img id="wpp" class="icono" src="./media/WhatsApp.png">
@@ -48,6 +51,10 @@
     <script src="./js/productos.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/cart.js"></script>
+
+    <a href="https://wa.me/message/JF5BCO7TZVLVG1" target="_blank" rel="noopener noreferrer">
+        <img src="./media/WhatsApp.png" class="wpp-btn" id="wpp-btn">
+    </a>
 
 </body>
 </html>
