--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Encabezado -->
     <header class="encabezado">
 
-        <a class="centrarEnlace" href="./index.html">
+        <a class="centrarEnlace centrarMenu" href="./index.html">
             <img class="menu" src="./media/Menu.png" alt="Menu">
         </a>
 
