--- a/index.html
+++ b/index.html
@@ -60,15 +60,18 @@
 
     <div class="modal-informacion" id="modal-informacion"></div>
     <div class="modal-menu" id="modal-menu"></div>
+    <div class="modal-sobreMi"></div>
+    <div class="modal-tarot"></div>
+
+
+    <a class="wpp-enlace" href="https://wa.me/message/JF5BCO7TZVLVG1" target="_blank" rel="noopener noreferrer">
+        <img src="./media/WhatsApp.png" class="wpp-btn" id="wpp-btn">
+    </a>
 
     <!-- importaciones -->
     <script src="./js/productos.js"></script>
     <script defer src="./js/index.js"></script>
     <script src="./js/cart.js"></script>
-
-    <a class="wpp-enlace" href="https://wa.me/message/JF5BCO7TZVLVG1" target="_blank" rel="noopener noreferrer">
-        <img src="./media/WhatsApp.png" class="wpp-btn" id="wpp-btn">
-    </a>
 
 </body>
 </html>
