--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
         <div class="contenedorBuscador">
             <input class="buscadorProductos" type="text" placeholder="¿Qué estas buscando?">
         </div>
-
-
     </header>
 
     <audio id="buySound" src="./media/button.mp3"></audio>
@@ -57,12 +55,11 @@
     <!-- modal -->
     <div class="modal-overlay" id="modal-overlay"></div>
     <div class="modal-container" id="modal-container"></div>
-
     <div class="modal-informacion" id="modal-informacion"></div>
     <div class="modal-menu" id="modal-menu"></div>
     <div class="modal-sobreMi"></div>
     <div class="modal-tarot"></div>
-
+    <div class="modal-seleccionarFecha"></div>
 
     <a class="wpp-enlace" href="https://wa.me/message/JF5BCO7TZVLVG1" target="_blank" rel="noopener noreferrer">
         <img src="./media/WhatsApp.png" class="wpp-btn" id="wpp-btn">
@@ -70,8 +67,8 @@
 
     <!-- importaciones -->
     <script src="./js/productos.js"></script>
-    <script defer src="./js/index.js"></script>
-    <script src="./js/cart.js"></script>
+    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/cart.js"></script>
 
 </body>
 </html>
