--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <img class="menu" src="./media/Menu.png" alt="Menu">
         </a>
 
-        <a class="centrarEnlace" href="./index.html">
+        <div class="centrarEnlace contenedorLogo">
             <img class="logo" src="./media/logoEspacioMelo.png" alt="Espacio Melo">
-        </a>
+        </div>
         
         <div class="contenedorCarrito centrarEnlace">
             <!-- cart btn -->
